# Assyst

./: .env  .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.template.json  config.toml  config.toml.template  flush_pipe.sh  package-lock.json  package.json  run.sh  tsconfig.json
assyst-bot/: Cargo.toml
assyst-bot/src/: ansi.rs  assyst.rs  badtranslator.rs  caching.rs  downloader.rs  eval.rs  evaltemplate.rs  filetype.rs  handler.rs  lib.rs  logger.rs  logging.rs  main.rs  metrics.rs  util.rs
assyst-bot/src/caching/: local_caching.rs  mod.rs  persistent_caching.rs
assyst-bot/src/command/: command.rs  context.rs  messagebuilder.rs  mod.rs  parse.rs  registry.rs
assyst-bot/src/command/categories/: codesprint.rs  fun.rs  image.rs  image_annmarie.rs  image_makesweet.rs  image_wsi.rs  misc.rs  mod.rs  tag.rs
assyst-bot/src/handlers/: message_create.rs  message_delete.rs  message_update.rs  mod.rs
assyst-bot/src/rest/: annmarie.rs  audio_identify.rs  bt.rs  codesprint.rs  mod.rs  patreon.rs  rust.rs  wombo.rs  wsi.rs
assyst-bot/src/tasks/: bot_list_posting.rs  cache_gc.rs  healthcheck.rs  metrics.rs  mod.rs  patreon.rs  reminders.rs
assyst-cache/: Cargo.toml
assyst-cache/src/: main.rs  request_handler.rs  state.rs
assyst-cache/src/guild_cache/: mod.rs
assyst-common/: Cargo.toml
assyst-common/src/: bt.rs  cache.rs  config.rs  consts.rs  eval.rs  filetype.rs  lib.rs  util.rs
assyst-common/src/persistent_cache/: event_containers.rs  guild_cache.rs  mod.rs
assyst-database/: Cargo.toml
assyst-database/src/: lib.rs
assyst-gateway/: Cargo.toml
assyst-gateway/src/: main.rs
assyst-logger/: Cargo.toml
assyst-logger/src/: lib.rs
assyst-tag/: Cargo.toml
assyst-tag/src/: context.rs  lib.rs  parser.rs  subtags.rs
assyst-webserver/: Cargo.toml
assyst-webserver/src/: filters.rs  handlers.rs  lib.rs
src/: assyst.rs  assyst.ts  badtranslator.rs  badtranslator.ts  bot.ts  botlist.rs  caching.rs  config.rs  constants.ts  consts.rs  database.rs  filetype.rs  handler.rs  logging.rs  main.rs  metrics.rs  run.ts  util.rs  utils.ts
src/command/: client.rs  command.rs  context.rs  messagebuilder.rs  mod.rs  parse.rs  parser.rs  registry.rs
src/command/categories/: fun.rs  image.rs  image_annmarie.rs  image_wsi.rs  misc.rs  mod.rs
src/commands/: baseadmincommand.ts  basecommand.ts  basefapicommand.ts  baseimagescriptcommand.ts
src/commands/admin/: eval.ts  exec.ts  restart.ts  sql.ts  update.ts
src/commands/fapi/: _9gag.ts  adidias.ts  adminwalk.ts  ajit.ts  america.ts  analysis.ts  austin.ts  autism.ts  bandicam.ts  bernie.ts  binoculars.ts  blackify.ts  blackpanther.ts  bobross.ts  changemymind.ts  coolguy.ts  days.ts  depression.ts  disabled.ts  dork.ts  duckduckgo.ts  duckduckgoimage.ts  edges.ts  edges2emojis.ts  edges2emojisgif.ts  edges2porn.ts  edges2porngif.ts  excuse.ts  faceswap.ts  fapi.ts  gaben.ts  gay.ts  god.ts  goldstar.ts  grill.ts  hawking.ts  hypercam.ts  idubbbz.ts  ifunny.ts  israel.ts  (+49 more)
src/commands/gif/: add.ts  gc.ts  random.ts
src/commands/imagescript/: create.ts  delete.ts  edit.ts  imagescript.ts  info.ts  list.ts  package_create.ts  package_delete.ts  package_edit.ts  package_raw.ts  raw.ts  tag.ts  top.ts
src/commands/maryjane/: bans.ts  guild.ts  user.ts
src/commands/remind/: list.ts  remind.ts
src/commands/util/: avatar.ts  biglink.ts  caption.ts  clean.ts  crepls.ts  eval.ts  gif.ts  gifsuggest.ts  help.ts  info.ts  invite.ts  ocr.ts  ping.ts  prefix.ts  rust.ts  undo.ts  uptime.ts  user.ts
src/commands/zx8/: eval.ts  html.ts  image.ts  info.ts  node.ts  nodes.ts  random.ts  recent.ts  search.ts
src/constants/: badtranslator.ts  credits.ts  imagescript.ts  rextester.ts
src/database/: database.ts  types.ts
src/handlers/: message_create.rs  message_update.rs  mod.rs
src/parse/: expressions.ts  parser.ts
src/rest/: annmarie.rs  baserestclient.ts  bt.rs  identify.rs  maryjane.rs  mod.rs  patreon.rs  rest.ts  rust.rs  types.ts  wsi.rs
src/rest/maryjane/: maryjane.ts  types.ts
src/rest/zx8/: types.ts  zx8.ts
src/tasks/: bot_list_posting.rs  cache_gc.rs  mod.rs  patreon.rs  reminders.rs
