[package]
name = "assyst"
version = "0.1.0"
authors = ["Jacher <jacherrr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.3"
twilight-http = "0.3"
twilight-model = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3.12"
sqlx = { version = "0.4.2", features = [ "postgres", "runtime-tokio-rustls" ] }
serde = "1.0.123"
toml = "0.5.8"