[package]
name = "assyst"
version = "0.1.0"
authors = ["Jacher <jacherrr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.3"
twilight-http = "0.3"
twilight-model = "0.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.12"
sqlx = { version = "0.5.1", features = [ "postgres", "runtime-tokio-rustls" ] }
serde = "1.0.123"
serde_json = "1.0"
toml = "0.5.8"
dotenv = "0.15.0"
async-trait = "0.1.42"
lazy_static = "1.4.0"
regex = "1.4.3"
reqwest = { version = "0.11.0", features = [ "json", "stream" ] }
bytes = "1.0.1"
futures-util = "0.3.12"
tl = { git = "https://github.com/y21/tl", branch = "next" }
twilight-embed-builder = "0.3.0"
warp = "0.3.0"
emoji = "0.2.1"