[package]
name = "assyst"
version = "0.1.0"
authors = ["Jacher <jacherrr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
twilight-gateway = "0.11.0"
twilight-http = "0.11.0"
twilight-model = "0.11.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.12"
sqlx = { version = "0.5.1", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
serde = "1.0.123"
serde_json = "1.0"
dotenv = "0.15.0"
async-trait = "0.1.42"
lazy_static = "1.4.0"
regex = "1.4.3"
reqwest = { version = "0.11.0", features = ["json", "stream"] }
bytes = "1.0.1"
futures-util = "0.3.12"
tl = "0.4.2"
twilight-embed-builder = "0.11.0"
emoji = "0.2.1"
rand = "0.8"
bincode = "1.3.3"
async-recursion = "0.3.2"
prometheus = "0.13.0"
assyst-webserver = { path = "../assyst-webserver" }
assyst-database = { path = "../assyst-database" }
assyst-common = { path = "../assyst-common" }
assyst-logger = { path = "../assyst-logger" }
assyst-tag = { path = "../assyst-tag" }
shared = { git = "https://github.com/jacherr/wsi-shared" }
url = "2.2.2"
phf = "0.10.1"
serde_repr = "0.1.8"
phf_macros = "0.10.0"
libc = "0.2.126"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["psapi"] }
