[package]
name = "assyst-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
assyst-common = { path = "../assyst-common" }
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3.3"
futures-util = "0.3.12"
twilight-model = "0.11.0"
serde = { version = "1.0.123", features = ["derive"] }