[package]
name = "assyst-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.15.2"
twilight-model = "0.15.2"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3.3"
libc = "0.2.126"
assyst-common = { path = "../assyst-common" }
anyhow = "1.0"
futures-util = "0.3.12"
twilight-http = "0.15.2"
serenity = "0.12.0"
serde_json = "1.0"