[package]
name = "assyst-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-model = "0.15.2"
assyst-common = { path = "../assyst-common" }
twilight-http = "0.15.2"
twilight-util = { version = "0.15.2", features = ["builder"] }
assyst-database = { path = "../assyst-database" }