[package]
name = "assyst-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3.0"
prometheus = "0.13.0"
serde = { version = "1.0.123", features = ["derive"] }
twilight-model = "0.5.0"
twilight-http = "0.5.0"
assyst-common = { path = "../assyst-common" }
assyst-database = { path = "../assyst-database" }
assyst-logger = { path = "../assyst-logger" }
